--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Docker Build
-        run: docker build -t ${{ secrets.DOCKER_USER }}/apt-builder-service:latest .
+        run: docker build -t ${{ secrets.DOCKER_USER }}/song-service:latest .
 
       - name: Upload container to Docker Hub with Push
-        run: docker push ${{ secrets.DOCKER_USER }}/apt-builder-service:latest
+        run: docker push ${{ secrets.DOCKER_USER }}/song-service:latest
